--- a/course-project/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/course-project/src/app/recipes/recipe-list/recipe-list.component.html
@@ -2,6 +2,5 @@
     <button class="btn btn-success">New Recipe</button>
 </div><br>
 <div class="row">
-    <app-recipe-item *ngFor="let recipeEl of recipes" [recipeItem]="recipeEl" 
-        (recipeDetailed)="showDetails(recipeEl)"></app-recipe-item>
+    <app-recipe-item *ngFor="let recipe of recipes" [recipeItem]="recipe"></app-recipe-item>
 </div>
