--- a/course-project/src/app/recipes/recipes.component.html
+++ b/course-project/src/app/recipes/recipes.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-5">
-    <app-recipe-list (showDetailed)="recipeDet = $event"></app-recipe-list>
+    <app-recipe-list></app-recipe-list>
   </div>
   <div class="col-md-7">
     <app-recipe-detail *ngIf="recipeDet; else infoText" [recipeItem]="recipeDet"></app-recipe-detail>
